# MidiPlayerWithQt

./: .gitignore  CMakeLists.txt  MIDIPlayer.cpp  MIDIPlayer.h  Resources.qrc  main.cpp  mainview.cpp  mainview.h  mainview.ui  pianowidget.cpp  pianowidget.h  picturewidget.cpp  picturewidget.h  picturewidget.ui  ui_mainview.h  ui_picturewidget.h
